--- a/css/main.css
+++ b/css/main.css
@@ -8,9 +8,6 @@ body {
 }
 
 .navbar {
-    max-width: 870px;
-    width: 100%;
-    margin: auto;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -37,4 +34,77 @@ body {
 
 .nav-link.active {
     font-weight: 700;
+}
+
+.container {
+    max-width: 870px;
+    width: 100%;
+    margin: auto;
+}
+
+.header {
+    display: flex;
+    align-items: center;
+    padding-top: 74px;
+    padding-bottom: 70px;
+}
+
+.header-text {
+    margin-left: 27px;
+
+}
+
+.header-strong {
+    font-weight: 700;
+    font-size: 48px;
+    line-height: 125%;
+
+}
+
+.header-heading {
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 135%;
+    letter-spacing: -0.02em;
+    margin-top: 8px;
+    margin-bottom: 24px;
+}
+
+.header-primary {
+    color: #BF7506;
+}
+
+.social-list {
+    list-style: none;
+    padding: 0;
+    display: flex;
+    align-items: center;
+}
+
+.social-link {
+    display: inline-block;
+    padding: 8px;
+}
+
+.header-links {
+    display: flex;
+    align-items: center;
+}
+
+.dowloade {
+    display: flex;
+    align-items: center;
+    padding: 7px 8px;
+    margin-left: 55px;
+    text-decoration: none;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 150%;
+    color: #211B12;
+    border-bottom: 2px solid #BF7506;
+    ;
+}
+
+.cv-downloade {
+    margin-right: 4px;
 }
