--- a/css/main.css
+++ b/css/main.css
@@ -108,3 +108,93 @@ body {
 .cv-downloade {
     margin-right: 4px;
 }
+
+.section-heading {
+    font-weight: 700;
+    font-size: 48px;
+    line-height: 125%;
+    letter-spacing: -0.03em;
+    color: #BF7506;
+
+}
+
+.cards {
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+}
+
+.card {
+    max-width: 400px;
+    margin-bottom: 40px;
+}
+
+.card-text-wraper {
+    padding: 16px;
+
+}
+
+.card-text {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 150%;
+    color: #211B12;
+}
+
+.card-titile {
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 135%;
+    letter-spacing: -0.02em;
+    color: #BF7506;
+    margin-top: 0;
+    margin-bottom: 8px;
+}
+
+.tags {
+    display: flex;
+    list-style: none;
+    align-items: center;
+    padding: 0;
+    margin-top: 8px;
+    margin-bottom: 16px;
+
+}
+
+
+.tag {
+    text-decoration: none;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 150%;
+    color: #211B12;
+    border: 1px solid #DD9C3C;
+    border-radius: 4px;
+    Padding: 5px 8px 4px 8px;
+    margin-right: 4px;
+
+
+}
+
+.card-buttons {
+    display: flex;
+    align-items: center;
+}
+
+.card-button {
+    display: flex;
+    align-items: center;
+    padding: 7px 8px;
+    text-decoration: none;
+    color: #211B12;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 150%;
+    border-bottom: 2px solid #BF7506;
+    margin-right: 25px;
+
+}
+
+.card-button-icon {
+    margin-right: 4px;
+}
