--- a/css/main.css
+++ b/css/main.css
@@ -129,6 +129,10 @@ body {
     margin-bottom: 40px;
 }
 
+.card-img {
+    min-width: 100%;
+}
+
 .card-text-wraper {
     padding: 16px;
 
@@ -278,6 +282,14 @@ body {
 
 .feedback {
     padding: 80px 0 160px;
+    position: relative;
+}
+
+.feedback-hend {
+    position: absolute;
+    right: 0;
+    top: 20%;
+    width: 30%;
 }
 
 .input-group {
@@ -306,7 +318,7 @@ body {
 .input {
     border: 3px solid #E0DEDC;
     border-radius: 4px;
-    width: 435px;
+    width: 100%;
     height: 56px;
 }
 
@@ -337,4 +349,142 @@ body {
     border-bottom: 2px solid #BF7506;
     background-color: #fff;
     cursor: pointer;
+}
+
+@media (max-width: 1020px) {
+    .container {
+        max-width: 760px;
+    }
+
+    .card {
+        max-width: 350px;
+    }
+}
+
+@media (max-width: 790px) {
+    .container {
+        max-width: 576px;
+    }
+
+    .header-photo {
+        max-width: 150px;
+    }
+
+    .header-strong {
+        font-size: 36px;
+    }
+
+    .header-heading {
+        font-size: 18px;
+    }
+
+    .cv-downloade {
+        margin-left: 15px;
+    }
+
+    .card-img {
+        max-width: 45%;
+    }
+
+    .card {
+        max-width: 45%;
+    }
+
+    .card-text-wraper {
+        padding: 8px 0;
+    }
+
+    .card-titile {
+        font-size: 20px;
+    }
+
+    .developer {
+        flex-direction: column;
+    }
+
+    .developer-photo {
+        width: 100%;
+        height: 350px;
+        margin-bottom: 30px;
+    }
+
+    .developer-about {
+        margin-left: 0;
+    }
+
+    .feedback-hend {
+        display: none;
+    }
+
+    .tags {
+        flex-wrap: wrap;
+    }
+
+    .tags-item {
+        margin-bottom: 20px;
+    }
+}
+
+@media (max-width: 600px) {
+    .container {
+        max-width: 90%;
+    }
+
+    .navbar {
+        flex-direction: column;
+        padding-top: 40px;
+
+    }
+
+    .header {
+        flex-direction: column;
+        text-align: center;
+    }
+
+    .header-links {
+        flex-direction: column;
+    }
+
+    .dowloade {
+        margin-left: 0;
+    }
+
+    .cv-downloade {
+        margin-left: 0;
+    }
+
+    .cards {
+        flex-direction: column;
+    }
+
+    .card {
+        min-width: 100%;
+    }
+}
+
+@media (max-width: 480px) {
+    .container {
+        max-width: 90%;
+    }
+
+    .form-container {
+        width: 90%;
+    }
+
+    .nav-list {
+        flex-direction: column;
+    }
+
+    .nav-link {
+        margin-left: 0;
+        margin-bottom: 10px;
+    }
+
+    .section-heading {
+        font-size: 43px;
+        text-align: center;
+
+
+
+    }
 }
